--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -186,4 +186,6 @@ h3{font-size: 4.0em;font-weight: 500;}
      .video-banner-overlay{width: 100%;height:50vh;line-height: 52vh;}
 
      .new-trends{width: 100%;height:17vh;background-color: #fff;margin-bottom: 7px}*/
+
+     #header button{border: none}
 }
