--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -187,5 +187,11 @@ h3{font-size: 4.0em;font-weight: 500;}
 
      .new-trends{width: 100%;height:17vh;background-color: #fff;margin-bottom: 7px}*/
 
-     #header button{border: none}
+     #header{padding:8px;margin-bottom: 8px;}
+     #header button{border: none;}
+     #header button span{color: #fff !important;}
+     #topnews{padding: 10px}
+     .carousel{width: 100%;height:30vh;margin-bottom: 10px}
+     .carousel-item{width: 100%;height:30vh}
+     .carousel-overlay{width: 100%;height:30vh;
 }
