--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -191,9 +191,9 @@ h3{font-size: 4.0em;font-weight: 500;}
      #header button{border: none;}
      #header button span{color: #fff !important;}
      #topnews{padding:5px}
-     .carousel{width: 100%;height:40vh;margin-bottom: 10px}
-     .carousel-item{width: 100%;height:40vh}
-     .carousel-overlay{width: 100%;height:40vh;}
-
+     .carousel{width: 100%;height:30vh;margin-bottom: 10px}
+     .carousel-item{width: 100%;height:30vh}
+     .carousel-overlay{width: 100%;height:30vh;}
+     .top-story{width: 100%;height:30vh}
      .top-story img{width: 100%;height:30vh}
 }
