--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -196,4 +196,6 @@ h3{font-size: 4.0em;font-weight: 500;}
      .carousel-overlay{width: 100%;height:30vh;}
      .top-story{width: 100%;height:30vh}
      .top-story img{width: 100%;height:30vh}
+
+     .image-story img{height: 10vh;width: 100%}
 }
