--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -197,5 +197,7 @@ h3{font-size: 4.0em;font-weight: 500;}
      .top-story{width: 100%;height:30vh}
      .top-story img{width: 100%;height:30vh}
 
-     .image-story img{height: 10vh;width: 100%}
+     .aritcles .articles-sheet{width: 100%;padding:0px;}
+
+    
 }
