--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -87,7 +87,7 @@ h3{font-size: 4.0em;font-weight: 500;}
 .aritcles{width: 100%;margin-top: 10px}
 .aritcles .col-md-4{position: relative;}
 .aritcles .articles-sheet{width: 100%;padding: 15px;background-color: #fff;position: relative;}
-.aritcles .articles-sheet .articles-items{width: 100%;position: relative;}
+.aritcles .articles-sheet .articles-items{width: 100%;position: relative;margin-bottom: 18px;}
 
 .aritcles .articles-sheet .articles-items .articles-items-image{width: 100%;height:40vh;background-color: rgba(0,0,0,0.2);}
 .aritcles .articles-sheet .articles-items .articles-items-image img{height: 100%;width: 100%}
@@ -197,7 +197,8 @@ h3{font-size: 4.0em;font-weight: 500;}
      .top-story{width: 100%;height:30vh}
      .top-story img{width: 100%;height:30vh}
 
-     .aritcles .articles-sheet{width: 100%;padding:0px;}
-
+     .aritcles .articles-sheet{width: 100%;padding:0px;background-color: transparent !important;}
+     .aritcles .articles-sheet .articles-items{margin-bottom: 10px;}
+      
     
 }
