new variety orders

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -202,6 +202,13 @@ h3{font-size: 4.0em;font-weight: 500;}
 
      .aritcles .articles-sheet .articles-items .articles-items-image{width: 100%;height:30vh;}
      .aritcles .articles-sheet .articles-items .articles-items-image img{width: 100%;height: 100%;}
-     .aritcles .articles-sheet .articles-items .articles-items-body{width: 100%;height: 100%};
+     .aritcles .articles-sheet .articles-items .articles-items-body{width: 100%;height: 100%}
+
+
+     .news-section-sheet{width: 100%;background-color:#fff;padding:0px;margin-bottom: :5px;}
+
+     .top-story-line,.main-stories{padding: 15px;background-color: #fff;}
+
+
      
 }
