good old days boy

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -216,6 +216,8 @@ h3{font-size: 4.0em;font-weight: 500;}
      .video-and-trends .video{padding: 0px;}
      .video-banner-overlay{width: 100%;height:45vh;line-height: 45vh;}
 
-
+     .around-the-world-main{height: 40vh;
+     }
+           
      
 }
