--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -105,7 +105,7 @@ h3{font-size: 4.0em;font-weight: 500;}
 .video-banner-overlay i{font-size:4.0em;color: #fff}
 
 
-.new-trends{width: 100%;height:12vh;background-color: #fff;margin-bottom: 5px}
+.new-trends{width: 100%;height:15vh;background-color: #fff;margin-bottom: 5px}
 .new-trends .new-trends-video{width: 25%;height: 100%;background-color: rgba(0, 0, 0,0.1);}
 .new-trends .new-trends-video img{width: 100%;height: 100%}
 .new-trends .new-trends-caption{width: 73%;height: 100%;padding: 5px}
@@ -126,7 +126,7 @@ h3{font-size: 4.0em;font-weight: 500;}
 .around-the-world .owl-carousel .item .item-image{width: 100%;height:35vh;background-color: rgba(0, 0, 0,0.1);}
 
 .popular-posts{width: 100%;padding: 15px;background-color: #fff;}
-.popular-posts-story{width: 100%;padding: 10px 0px;height: 15vh;}
+.popular-posts-story{width: 100%;padding: 10px 0px;height: 17vh;}
 .popular-posts-story:not(:last-child){border-bottom: 1px solid #ebebeb;}
 .popular-posts-image{width: 25%;height: 12vh;background-color: rgba(0, 0, 0,0.1);}
 .popular-posts-image img{width: 100%;height: 100%}
@@ -219,6 +219,9 @@ h3{font-size: 4.0em;font-weight: 500;}
      .around-the-world-main{height: 40vh;}
 
      .around-the-world .owl-carousel .item .item-image{height:20vh}
+
+     .popular-posts .ad-image{height: 50vh}
+     .popular-posts .ad-image{height: 50vh}
      }
            
      
