--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -220,8 +220,9 @@ h3{font-size: 4.0em;font-weight: 500;}
 
      .around-the-world .owl-carousel .item .item-image{height:20vh}
 
-     .popular-posts .ad-image{height: 50vh}
-     .popular-posts .ad-image{height: 50vh}
+     .popular-posts .ad-image{height: 40vh}
+     .popular-posts .ad-image{height: 40vh}
+     .ad-image-over{height:40vh}
      }
            
      
