--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -220,12 +220,14 @@ h3{font-size: 4.0em;font-weight: 500;}
 
      .around-the-world .owl-carousel .item .item-image{height:20vh}
 
-     .popular-posts .ad-image{height: 40vh}
+     /*.popular-posts .ad-image{height: 40vh}
      .popular-posts .ad-image{height: 40vh}
      .ad-image-over{height:40vh}
      .ad-image-over img{height: 100%}
-     .popular-posts .recent-post{height: 25px;padding: 6px 0px;}
-     }
+     .popular-posts .recent-post{height: 25px;padding: 6px 0px;}*/
+     .topnews-story{width: 100%;height:30vh;}
+     .topnews-story-overlay{width: 100%;height:30vh;}
+
            
      
 }
