--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,7 +1,7 @@
 *{margin: 0px;padding: 0px;}
 
-h1,h2,h3,h4,h5,h6{font-family: 'Oswald';}
-p,span,a{font-family: 'Oswald';font-weight: 300;}
+h1,h2,h3,h4,h5,h6{font-family: 'Montserrat';}
+p,span,a{font-family: 'Montserrat';font-weight: 300;}
 h1{font-size: 7.0em;font-weight: 700;}
 h2{font-size: 6.0em;font-weight: 700;}
 h3{font-size: 4.0em;font-weight: 500;}
@@ -206,7 +206,7 @@ h3{font-size: 4.0em;font-weight: 500;}
      .aritcles .articles-sheet .articles-items .articles-items-body{width: 100%;height: 100%}
 
 
-     .news-section-sheet{width: 100%;padding:0px;margin-bottom: :5px;}
+     .news-section-sheet{width: 100%;padding:5px;margin-bottom: :5px;}
      .news-section-sheet #new_items_sheet{background-color:#fff;}
      .top-story-line,.main-stories{padding: 15px;background-color: #fff;}
      .top-story-line img{height: 85%}
@@ -220,11 +220,11 @@ h3{font-size: 4.0em;font-weight: 500;}
 
      .around-the-world .owl-carousel .item .item-image{height:20vh}
 
-     /*.popular-posts .ad-image{height: 40vh}
+     .popular-posts .ad-image{height: 40vh}
      .popular-posts .ad-image{height: 40vh}
      .ad-image-over{height:40vh}
      .ad-image-over img{height: 100%}
-     .popular-posts .recent-post{height: 25px;padding: 6px 0px;}*/
+     .popular-posts .recent-post{height: 25px;padding: 6px 0px;}
      .topnews-story{width: 100%;height:30vh;}
      .topnews-story-overlay{width: 100%;height:30vh;}
 
