--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -222,9 +222,9 @@ h3{font-size: 4.0em;font-weight: 500;}
 
      .popular-posts .ad-image{height: 40vh}
      .popular-posts .ad-image{height: 40vh}
-     .ad-image-over{height:40vh;display: none;}
+     .ad-image-over{height:40vh;display: display;}
 
-     .popular-posts .recent-post{height: 25px;padding: 6px 0px;}
+     .popular-posts .recent-post{height: 25vh;padding: 6px 0px;}
      .topnews-story{width: 100%;height:40vh;}
      .topnews-story-overlay{width: 100%;height:40vh;}
 
