--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -199,7 +199,7 @@ h3{font-size: 4.0em;font-weight: 500;}
      .video-banner-overlay{width: 100%;height:50vh;line-height: 52vh;}
 
      .new-trends{width: 100%;height:17vh;background-color: #fff;margin-bottom: 7px}*/
-     html{font-size:12px}
+     html{font-size:14px}
      span,p,a{font-weight: 400;}
      #header{padding:13px;margin-bottom:20px;}
      #header button{border: none;}
@@ -222,7 +222,7 @@ h3{font-size: 4.0em;font-weight: 500;}
 
 
      .main-stories-description{width: 100%;height:15vh}
-     .main-stories-image{width: 25%;height: 12px}
+     .main-stories-image{width: 25%;height: 12vh}
      .main-stories-image img{height: 100%;width: 100%}
      .news-section-sheet{width: 100%;padding:5px;margin-bottom: :5px;}
      /*.news-section-sheet #new_items_sheet{background-color:#fff;}*/
