--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -115,14 +115,15 @@ h3{font-size: 4.0em;font-weight: 500;}
 .video-banner-overlay i{font-size:4.0em;color: #fff}
 
 
-.new-trends{width: 100%;height:15vh;background-color: #fff;margin-bottom: 5px}
+.new-trends{width: 100%;height:16vh;background-color: #fff;margin-bottom:7px}
 .new-trends .new-trends-video{width: 25%;height: 100%;background-color: rgba(0, 0, 0,0.1);position: relative;}
 
 .new-trends .new-trends-video img{width: 100%;height: 100%}
 .new-trends .new-trends-caption{width: 73%;height: 100%;padding: 5px}
 .new-trends .new-trends-caption h5 a{text-decoration: none;color: #404040;font-size: 15px;}
-.new-trends .new-trends-video .play-icon-overlay{width: 100%;height: 100%;position: absolute;left: 0px;top: 0px;background-color:rgba(0, 0, 0, 0.1);}
-
+.new-trends .new-trends-caption span{font-size: 12px;color:#ff0000 ;font-weight: 600}
+.new-trends .new-trends-video .play-icon-overlay{width: 100%;padding: 5px;height: 100%;position: absolute;left: 0px;top: 0px;background-color:rgba(0, 0, 0, 0.1);}
+.new-trends .new-trends-video .play-icon-overlay .paly{width: 100%;position: absolute;bottom: 4px;color: #fff}
 
 
 .page-trends{background-color: #fff;padding: 15px}
