--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -32,12 +32,12 @@ h3{font-size: 4.0em;font-weight: 500;}
 .top-story{width: 100%;height:40vh;background-color: rgba(0,0,0,0.1);margin-bottom: 10px;position: relative;}
 .top-story-overlay{width: 100%;height: 100%;padding: 8px;position: absolute;top: 0px;left: 0px;background-color:rgba(0, 0, 0,0.2);}
 .top-story-text{position: absolute;bottom: 10px;border-left: 2px solid red}
-.top-story-text h5 a{color: #f3f3f3;text-decoration: none;text-transform: uppercase;font-size: 14px;font-weight: 500;}
+.top-story-text h5 a{color: #f3f3f3;text-decoration: none;text-transform: uppercase;font-size: 13px;font-weight: 500;}
 .top-story-text span{text-transform: uppercase;color: #fff;font-weight: 500;font-size: 12px}
 .top-story img{width: 100%;height:40vh}
 
 .other-story-description-headline{width: 100%;height:17vh;}
-.other-story-description-headline h5 a{font-size: 15px;font-weight:400;color:#404040;text-decoration: none;word-spacing: 3px;}
+.other-story-description-headline h5 a{font-size: 13px;font-weight:400;color:#404040;text-decoration: none;word-spacing: 3px;}
 .other-story-description-headline h5 a:hover{color: #333}
 .other-story-description-headline p{color: #e6e6e6}
 .story-details span{text-transform: uppercase;color: #ff0000;font-weight: 500;font-size: 12px}
@@ -50,6 +50,8 @@ h3{font-size: 4.0em;font-weight: 500;}
 
 .news-section{padding: 30px 0px;}
 .news-section-sheet{width: 100%;background-color: #fff;padding: 15px;margin-bottom: :5px;}
+.news-section-sheet .title span{border-bottom: #ff0000}
+.news-section-sheet .title{width: 100%;position: relative;border-bottom: 1px solid #f3f3f3;}
 .news-section-sheet .advertise{width: 100%;height:60vh;background-color: rgba(0, 0, 0, 0.1);margin-bottom: 30px;}
 .news-section-sheet .popularposts .ul-list{width: 100%;list-style: none;padding: 0px}
 .news-section-sheet .popularposts .ul-list-item{width: 100%;padding:12px 0px;}
@@ -205,6 +207,7 @@ h3{font-size: 4.0em;font-weight: 500;}
      #header{padding:13px;margin-bottom:20px;}
      #header button{border: none;}
      #header button span{color: #fff !important;}
+     #navbarSupportedContent{text-align: left;}
      #topnews{padding:5px}
      .carousel{width: 100%;height:30vh;margin-bottom: 10px}
      .carousel-item{width: 100%;height:30vh}
