--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -117,7 +117,7 @@ h3{font-size: 4.0em;font-weight: 500;}
 .video-banner-overlay i{font-size:4.0em;color: #fff}
 
 
-.new-trends{width: 100%;height:16vh;background-color: #fff;margin-bottom:7px}
+.new-trends{width: 100%;height:15vh;background-color: #fff;margin-bottom:7px}
 .new-trends .new-trends-video{width: 25%;height: 100%;background-color: rgba(0, 0, 0,0.1);position: relative;}
 
 .new-trends .new-trends-video img{width: 100%;height: 100%}
@@ -247,6 +247,9 @@ h3{font-size: 4.0em;font-weight: 500;}
 
      .around-the-world .owl-carousel .item .item-image{height:20vh}
 
+     .popular-posts-story{width: 100%;height: 15vh}
+     .popular-posts-image{width: 25%;height: 12vh}
+     .popular-posts-image img{width: 100%;height: 100%}
      .popular-posts .ad-image{height: 40vh}
      .popular-posts .ad-image{height: 40vh}
      .ad-image-over{height:40vh;display: display;}
