--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -256,6 +256,7 @@ h3{font-size: 4.0em;font-weight: 500;}
      .popular-posts-image{width: 25%;height: 12vh}
      .popular-posts-image img{width: 100%;height: 100%}
      .popular-posts .ad-image{height: 40vh}
+     .popular-posts .ad-image img{width: 100%;height: 40vh}
      .popular-posts .ad-image{height: 40vh}
      .ad-image-over{height:40vh;display: display;}
 
