--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -177,7 +177,8 @@ h3{font-size: 4.0em;font-weight: 500;}
 @media only screen and (min-width:320px) and (max-width:768px){
 .modal-dialog{margin: 0;padding: 0;width: 60%;height: 100%}
 .modal-content{height: 0;min-height: 100%;border-radius: 0;}
-
+.modal-content .modal-line{width: 100%;padding: 15px 0px}
+.modal-content .modal-line a{color: #404040}
 	 /*#topnews{padding:2px; width: 100%;background-color: transparent !important;}
 	 #topnews .container-fluid{padding: 0px;}
 	 .carousel{width: 100%;height:55vh;margin-bottom: 10px;background-color: #fff;padding: 7px}
