--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -219,8 +219,9 @@ h3{font-size: 4.0em;font-weight: 500;}
      #header .collapse.navbar-collapse ul li a{color:#f3f3f3;width:100%;font-size:14px ;text-transform: uppercase;text-align:left;font-weight: bold;padding:10px}
      #header .collapse.navbar-collapse ul li a:not(:last-child){border-bottom: 1px solid #f3f3f3;}
      #navbarSupportedContent{z-index: 99999; blue;height: 100%;}
-
-
+     .other-story-description-headline{width: 100%;height:15vh;}
+     .other-story-description-headline .image-story{width: 25%;height: 12vh}
+     .other-story-description-headline .image-story img{width: 100%;height: 100vh}
      #topnews{padding:5px}
      .carousel{width: 100%;height:30vh;margin-bottom: 10px}
      .carousel-item{width: 100%;height:30vh}
